<resources>
    <string name="app_name">ChatAppDemo</string>
    <string name="login_activity">login</string>
    <string name="login_ok">login successfully</string>
    <string name="error_msg">something went wong! plaese try again</string>
    <string name="login_dialog_message">Authentication...</string>
    <string name="required_text">Required Field</string>
    <string name="register_activity">create an account</string>
    <string name="create_account_dialog_message">Creating Account</string>
    <string name="register_ok">account created successfully</string>
    <string name="register_error">something went wrong! please try again</string>
    <string name="sendPassword">we will send password to your email</string>
    <string name="main_activity">Home</string>
    <string name="alert_signout">Are you sure you want to sign out?</string>
    <string name="not_first_time">it\'s not first time</string>
    <string name="first_time">null</string>
    <string name="defaults">default</string>
    <string name="setting_activity">Settings</string>
    <string name="default_status">Hey there! i am using WhatsApp.</string>
    <string name="default_main_image">not determined yet.</string>
    <string name="default_mobile">mobile number is un available yet</string>
    <string name="status_activity">Change your status</string>
    <string name="change_status">Change your status</string>
    <string name="change_name">Change your name</string>
    <string name="change_mobile">Change your mobile</string>
    <string name="username_key">uName</string>
    <string name="status_key">uStatus</string>
    <string name="mobile_key">uPhone</string>
    <string name="profile_images_file">profile_image</string>
    <string name="main_image_key">uImage</string>
    <string name="waiting">waiting</string>
    <string name="all_user_activity">All Users</string>
    <string name="thumbs_file">thumbs</string>
    <string name="default_thumb_image">default</string>
    <string name="thumb_image_key">uThumb</string>
    <string name="send_request_btn">send friend request</string>
    <string name="candel_request_btn">cancel request</string>
    <string name="friend_req_table">friend_request</string>
    <string name="request_type">request_type</string>
    <string name="accept_req_btn">Accept request</string>
    <string name="decline_req_btn">Decline request</string>
    <string name="friends_table">friends</string>
    <string name="friend_acceptance">you are friends now</string>
    <string name="unfriend_btn">unfriend</string>
    <string name="decline_msg">you have declined request</string>
    <string name="notification_table">notifications</string>
    <string name="messages_table">messages</string>
    <string name="message_images">message_images</string>
    <string name="appwidget_text">Friend Requests</string>
    <string name="add_widget">Add widget</string>
    <string name="charging_reminder_notification_title">Remainder</string>
    <string name="charging_reminder_notification_body">good morning,let\'s check your latest chats with your friend</string>
    <string name="main_notification_channel_name">notification_channel</string>
    <string name="send_a_message_hint">send a message</string>
    <string name="send_message_button_text">send</string>
    <string name="email_edit_hint">Email</string>
    <string name="password_edit_hint">password</string>
    <string name="login_button_text">Login</string>
    <string name="forget_password_button">forget password?</string>
    <string name="name_edit_hint">name</string>
    <string name="create_account_button_text">create an account</string>
    <string name="ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_size">BANNER</string>
    <string name="setting_profile_image">setting profile image</string>
    <string name="about_and_phone_number">About and phone number</string>
    <string name="edit_status">edit_status</string>
    <string name="edit_name">edit name</string>
    <string name="edit_mobile_number">edit mobile number</string>
    <string name="welcome_statement">welcome Chat App</string>
    <string name="already_have_account_button_text">Already have account</string>
    <string name="create_an_account_button_text">create an account</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="widget_title">Friend Requests</string>
    <string name="widget_no_items">No Friend Requests to display</string>
    <string name="profile_image">profile_image</string>
    <string name="image">image</string>
    <string name="online_icon">online icon</string>
    <string name="choose_option_dialoge">choose option</string>
    <string name="change_your_setting">change your setting</string>
    <string name="all_users_option_menu">All users</string>
    <string name="sign_out_option_menu">sign out</string>
    <string name="invalid_input">please enter something</string>
    <string name="invalid_email_pass">please enter email and password</string>
    <string name="status_changed">status changed</string>
    <string name="invalid_email">invalid email</string>
    <string name="select_image">select image</string>
    <string name="image_has_changed">image has changed</string>
    <string name="todo">TODO</string>
    <string name="users_table">users</string>
    <string name="sure">sure</string>
    <string name="no">No</string>
    <string name="online">online</string>
    <string name="chat_table">Chat</string>
    <string name="time_stamp">timestamp</string>
    <string name="receive">receive</string>
    <string name="from_user_id">from_user_id</string>
    <string name="seen">seen</string>
    <string name="send">send</string>
    <string name="view_profile">view profile</string>
    <string name="message_child">message</string>
    <string name="messages_image">messages_image</string>


</resources>
