<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/setting_layout_background">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbarlayout"
        >
        <include layout="@layout/toolbar_layout"
            android:id="@+id/toolbar"
            />
    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:contentDescription="@string/setting_profile_image"
        android:id="@+id/image_profile"
        android:layout_width="@dimen/setting_profile_image_width"
        android:layout_height="@dimen/setting_profile_image_height"
        android:layout_marginEnd="@dimen/setting_profile_image_margin_end"
        android:layout_marginStart="@dimen/setting_profile_image_margin_start"
        android:layout_marginTop="@dimen/setting_profile_image_margin_top"
        android:src="@drawable/main_default_image"
        android:background="@drawable/back_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbarlayout" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_layout"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/setting_name_layout_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_profile">
        <TextView
            android:id="@+id/username_text_profile"
            android:layout_width="@dimen/zero_width"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:background="@drawable/white_rec"
            android:padding="@dimen/setting_name_padding"
            android:textSize="@dimen/text_size_20"
            android:textColor="@android:color/black"
             />

        <ImageView
            android:contentDescription="@string/edit_name"
            android:layout_width="@dimen/zero_width"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/white_rec"
            android:src="@drawable/ic_mode_edit_black_24dp"
            android:padding="@dimen/setting_edit_padding"
            android:id="@+id/change_name_profile"
            />
    </LinearLayout>


    <TextView

        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_rec"
        android:padding="15dp"
        android:text="@string/about_and_phone_number"
        android:textColor="@color/about_text_color"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/status_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:id="@+id/status_text_profile"
            android:textColor="@android:color/black"
            android:background="@drawable/white_rec"
            android:padding="15dp"
            android:text="@string/default_status"
            android:textSize="16sp"
            />

        <ImageView
            android:contentDescription="@string/edit_status"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/white_rec"
            android:src="@drawable/ic_mode_edit_black_24dp"
            android:padding="15dp"
            android:id="@+id/change_status_profile"
            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/mobile_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_layout">

        <TextView
            android:id="@+id/usermobile_text_profile"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:background="@drawable/white_rec"
            android:layout_marginTop="1dp"
            android:padding="15dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            />

        <ImageView
            android:contentDescription="@string/edit_mobile_number"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/white_rec"
            android:src="@drawable/ic_mode_edit_black_24dp"
            android:padding="15dp"
            android:id="@+id/change_mobile_profile"
            />

    </LinearLayout>



    <android.support.design.widget.FloatingActionButton
        android:layout_width="@dimen/fab_width"
        android:layout_height="@dimen/fab_height"
        android:id="@+id/change_image_fab"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:src="@drawable/ic_photo_camera_black_24dp"
        app:layout_constraintBottom_toTopOf="@+id/username_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="@+id/image_profile"
        app:layout_constraintTop_toTopOf="@+id/image_profile"
        app:layout_constraintVertical_bias="0.913" />


</android.support.constraint.ConstraintLayout>
    </ScrollView>